# petroleum

./: Cargo.toml  LICENSE
migrations/00000000000001_history_window/: down.sql  up.sql
src/: main.rs  schema.rs
src/bot/: handler.rs  mod.rs  models.rs
src/bot/models/: attachment.rs  channel.rs  embed.rs  message.rs  mod.rs  user.rs
src/handler/: history_window.rs  mod.rs  ping.rs  quote.rs
src/models/: history_window.rs  mod.rs
