[package]
name = "petroleum"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
once_cell = "1"
regex = "1"
twilight-gateway = "0.8"
twilight-http = "0.8"
twilight-model = "0.8"
futures = "0.3"
tokio = {version = "1.15", features = ["macros", "rt", "rt-multi-thread"]}
